--- a/app/views/lahTietoajukusta.html
+++ b/app/views/lahTietoajukusta.html
@@ -1,7 +1,9 @@
-<h1>About:Tietoa JUKUsta näyttö</h1>
-<h2>Mitä tähän?!?!!?</h2>
+<div class="container">
+  <h1>About:Tietoa JUKUsta näyttö</h1>
 
-<div class="row marketing" ng-repeat="sthing in someThings">
-  <p>{{sthing}}</p>
+  <h2>Mitä tähän?!?!!?</h2>
+
+  <div class="row marketing" ng-repeat="sthing in someThings">
+    <p>{{sthing}}</p>
+  </div>
 </div>
-
