--- a/app/views/lahHakemus.html
+++ b/app/views/lahHakemus.html
@@ -344,6 +344,10 @@
           <div ng-show="(avustushakemus.hakemustilatunnus == 'K')">
             <button data-ng-click="saveAvustushakemus()" class="pull-right btn btn-primary">Tallenna tiedot</button>
           </div>
+          <div ng-hide="(avustushakemus.hakemustilatunnus == 'K')">
+            <button data-ng-click="saveAvustushakemus()" class="pull-right btn btn-primary" disabled>Tallenna tiedot
+            </button>
+          </div>
           <button data-ng-click="showAvustushakemus()" class="pull-right btn btn-primary">Hakemuksen esikatselu</button>
         </div>
       </div>
@@ -372,7 +376,13 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <button data-ng-click="sendAvustushakemus()" class="pull-right btn btn-success">Lähetä hakemus</button>
+          <div ng-show="(avustushakemus.hakemustilatunnus == 'K')">
+            <button data-ng-click="sendAvustushakemus()" class="pull-right btn btn-success">Lähetä hakemus</button>
+          </div>
+          <div ng-hide="(avustushakemus.hakemustilatunnus == 'K')">
+            <button data-ng-click="sendAvustushakemus()" class="pull-right btn btn-success" disabled>Lähetä hakemus
+            </button>
+          </div>
         </div>
       </div>
     </form>
