--- a/app/views/kasHakemus.html
+++ b/app/views/kasHakemus.html
@@ -1,101 +1,410 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2><b>JOUKKOLIIKENTEEEN VALTIONAVUSTUSHAKEMUS {{avustushakemus.vuosi}}</b></h2>
+      <a href="#/k/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
+        suunnittelu</a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h3>Hakijan tiedot</h3>
+      <h2><b>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</b></h2>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4">
-      <h4>Kunnan nimi</h4>
-      <h5>{{osastoTiedot.kuntaNimi}}</h5>
-      <h4>Postiosoite</h4>
-      <h5>{{osastoTiedot.kuntaPostiosoite}}</h5>
-      <h4>Postinumero</h4>
-      <h5>{{osastoTiedot.kuntaPostinumero}}</h5>
-      <h4>Postitoimipaikka</h4>
-      <h5>{{osastoTiedot.kuntaPostitoimipaikka}}</h5>
+    <div class="col-md-12">
+      <div class="alaviiva">
+        <h3>HAKIJAN TIEDOT</h3>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <h4><b>Kunnan nimi</b></h4>
+      <h5>{{hakija}}</h5>
       <h4>Pankkitilin numero</h4>
-      <h5>{{osastoTiedot.kuntaPankkitili}}</h5>
+      <h5>Puuttuu</h5>
     </div>
-    <div class="col-md-4">
-      <h4>Hakijat</h4>
-      <h5>{{osastoTiedot.kuntaYhteysHlo}}</h5>
-      <h5>{{osastoTiedot.kuntaYhteysHloVirkaAsema}}</h5>
-      <h5>{{osastoTiedot.kuntaYhteysHloPuh}}</h5>
-      <h5>{{osastoTiedot.kuntaYhteysHloSahkoposti}}</h5>
-      <br>
-      <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHlo}}</h5>
-      <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHloVirkaAsema}}</h5>
-      <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHloPuh}}</h5>
-      <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHloSahkoposti}}</h5>
+    <div class="col-md-3">
+      <h4><b>Hakijat</b></h4>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <br>
-      <h5>{{osastoTiedot.kuntaToinenYhteysHlo}}</h5>
-      <h5>{{osastoTiedot.kuntaToinenYhteysHloVirkaAsema}}</h5>
-      <h5>{{osastoTiedot.kuntaToinenYhteysHloPuh}}</h5>
-      <h5>{{osastoTiedot.kuntaToinenYhteysHloSahkoposti}}</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-3">
+      <br>
+      <h4><b>Päätöksentekijä</b></h4>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
+      <h5>Puuttuu</h5>
     </div>
   </div>
   <div>
-    <form name="avustusHakemusTarkastusForm">
-      <div class="row">
-        <div class="col-md-12">
-          <h3>Valtionavustuksen kohde ja haettava valtionavustuksen määrä</h3>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="alaviiva">
+          <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
+            class='glyphicon glyphicon-question-sign'></span></a></h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-9">
-          <h4>PSA:n mukaisen liikenteen hankinta</h4>
-        </div>
-        <div class="col-md-3">
-          <h4>xxx xxx,xx €</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h4>Paikallisliikenne</h4>
-        </div>
-        <div class="col-md-6">
-          <h5>Haettava valtionavustus: {{avustushakemus.paikallisliikenneValtionavustus}} (euroa)</h5>
-        </div>
-        <div class="col-md-6">
-          <h5>Kunnan oma rahoitusosuus: {{avustushakemus.paikallisliikenneRahoitusosuus}} (euroa)</h5>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-md-9">
+            <h4 class="panel-title">PSA:n mukaisen liikenteen hankinta</h4>
+          </div>
+          <div class="col-md-3">
+            <div class="pull-right">
+              <h4 class="panel-title">{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus) | currency:"&euro;"}}</h4>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h4>Integroitu palvelulinja, kaikille avointa</h4>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Paikallisliikenne</h5>
+          </div>
+          <div ng-show="(psa1haettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{psa1haettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{psa1omarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(psa1haettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <h5>Haettava valtionavustus: {{avustushakemus.integroitupalvelulinjaValtionavustus}} (euroa)</h5>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Integroitu palvelulinja, kaikille avointa</h5>
+          </div>
+          <div ng-show="(psa2haettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{psa2haettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{psa2omarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(psa2haettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <h5>Kunnan oma rahoitusosuus {{avustushakemus.integroitupalvelulinjaRahoitusosuus}} (euroa)</h5>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Muu PSA:n mukaisen liikenteen järjestäminen</h5>
+          </div>
+          <div ng-show="(psamhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{psamhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{psamomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(psamhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h4>Muu PSA:n mukaisen liikenteen järjestäminen</h4>
-        </div>
-        <div class="col-md-6">
-          <h5>Haettava valtionavustus: {{avustushakemus.muupsaValtionavustus}} (euroa)</h5>
-        </div>
-        <div class="col-md-6">
-          <h5>Kunnan oma rahoitusosuus: {{avustushakemus.muupsaRahoitusosuus}} (euroa)</h5>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-10"></div>
-        <div class="col-md-2">
-          <button data-ng-click="tarkastaAvustushakemus()" class="btn btn-default">Hakemus OK</button>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-md-9">
+            <h4 class="panel-title">Hintavelvoitteiden korvaaminen</h4>
+          </div>
+          <div class="col-md-3">
+            <div class="pull-right">
+              <h4 class="panel-title">{{(hkslhaettavaavustus + hkklhaettavaavustus + hkllhaettavaavustus +
+                hktlhaettavaavustus) | currency:"&euro;"}}</h4>
+            </div>
+          </div>
         </div>
       </div>
-    </form>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Seutulippu</h5>
+          </div>
+          <div ng-show="(hkslhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{hkslhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{hkslomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(hkslhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Kaupunkilippu / kuntalippu</h5>
+          </div>
+          <div ng-show="(hkklhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{hkklhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{hkklomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(hkklhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Liityntälippu (esim. VR, pääkaupunkiseudun)</h5>
+          </div>
+          <div ng-show="(hkllhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{hkllhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{hkllomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(hkllhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Työmatkalippu</h5>
+          </div>
+          <div ng-show="(hktlhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{hktlhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{hktlomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(hktlhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-md-9">
+            <h4 class="panel-title">Liikenteen suunnittelu- ja kehittämishankkeet</h4>
+          </div>
+          <div class="col-md-3">
+            <div class="pull-right">
+              <h4 class="panel-title">{{(kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
+                krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Informaatio- ja maksujärjestelmien kehittäminen</h5>
+          </div>
+          <div ng-show="(kimhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{kimhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{kimomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(kimhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Matkapalvelukeskuksen suunnittelu ja kehittäminen</h5>
+          </div>
+          <div ng-show="(kmpkhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{kmpkhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{kmpkomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(kmpkhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Matkakeskuksen suunnittelu ja kehittäminen</h5>
+          </div>
+          <div ng-show="(kmkhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{kmkhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{kmkomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(kmkhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Raitiotien suunnittelu</h5>
+          </div>
+          <div ng-show="(krthaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{krthaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{krtomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(krthaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5>Muu hanke, mikä?</h5>
+          </div>
+          <div ng-show="(kmhaettavaavustus>0)">
+            <div class="col-md-6">
+              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>{{kmhaettavaavustus}}</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>{{kmomarahoitus}}</h5>
+            </div>
+          </div>
+          <div ng-show="(kmhaettavaavustus==0)">
+            <div class="col-md-12">
+              <h5>Ei haettu avustusta.</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-9">
+        <h4><b>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</b></h4>
+      </div>
+      <div class="col-md-3">
+        <div class="pull-right">
+          <h4><b>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
+            hkklhaettavaavustus + hkllhaettavaavustus +
+            hktlhaettavaavustus + kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
+            krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</b></h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h5>Lisätietoja avustusten kohteista<a href=""><span
+          class='glyphicon glyphicon-question-sign'></span></a></h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div ng-show="(avustushakemus.selite!=null)">
+          <h5>{{avustushakemus.selite}}</h5>
+        </div>
+        <div ng-show="(avustushakemus.selite==null)">
+          <h5>Ei selitettä.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="alaviiva">
+          <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h5>Päivämäärä</h5>
+        <h6>{{aikaleima | date:'dd.MM.yyyy'}}</h6>
+      </div>
+      <div class="col-md-6">
+        <h5>Päätöksentekijä</h5>
+        <h6>_kirjautuneen päätöksentekijän nimi_</h6>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <a href="#/k/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
+          suunnittelu</a>
+      </div>
+      <div class="col-md-6">
+        <button data-ng-click="checkAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi</button>
+      </div>
+    </div>
   </div>
 </div>
+
