Tekstejä korjattu vastaamaan demonäyttöjä

--- a/app/views/kasHakemus.html
+++ b/app/views/kasHakemus.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <a href="#/k/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
-        suunnittelu</a>
+        suunnittelunäkymään</a>
     </div>
   </div>
   <div class="row">
@@ -399,7 +399,7 @@
     <div class="row">
       <div class="col-md-6">
         <a href="#/k/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
-          suunnittelu</a>
+          suunnittelunäkymään</a>
       </div>
       <div class="col-md-6">
         <button data-ng-click="checkAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi</button>
