Ylimääräisiä header-tag:jä vaihdettu p-tageihin helpottamaan tyylittelyä

--- a/app/views/kasHakemus.html
+++ b/app/views/kasHakemus.html
@@ -19,35 +19,35 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <h4><b>Kunnan nimi</b></h4>
-      <h5>{{hakija}}</h5>
+      <h4>Kunnan nimi</h4>
+      <p>{{hakija}}</p>
       <h4>Pankkitilin numero</h4>
-      <h5>Puuttuu</h5>
+      <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
-      <h4><b>Hakijat</b></h4>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
+      <h4>Hakijat</h4>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
       <br>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-3">
       <br>
-      <h4><b>Päätöksentekijä</b></h4>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
+      <h4>Päätöksentekijä</h4>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
     </div>
   </div>
   <div>
@@ -80,16 +80,16 @@
           <div ng-show="(psa1haettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{psa1haettavaavustus}}</h5>
+              <p>{{psa1haettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{psa1omarahoitus}}</h5>
+              <p>{{psa1omarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(psa1haettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -100,16 +100,16 @@
           <div ng-show="(psa2haettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{psa2haettavaavustus}}</h5>
+              <p>{{psa2haettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{psa2omarahoitus}}</h5>
+              <p>{{psa2omarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(psa2haettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -120,16 +120,16 @@
           <div ng-show="(psamhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{psamhaettavaavustus}}</h5>
+              <p>{{psamhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{psamomarahoitus}}</h5>
+              <p>{{psamomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(psamhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -157,16 +157,16 @@
           <div ng-show="(hkslhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{hkslhaettavaavustus}}</h5>
+              <p>{{hkslhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{hkslomarahoitus}}</h5>
+              <p>{{hkslomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(hkslhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -177,16 +177,16 @@
           <div ng-show="(hkklhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{hkklhaettavaavustus}}</h5>
+              <p>{{hkklhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{hkklomarahoitus}}</h5>
+              <p>{{hkklomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(hkklhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -197,16 +197,16 @@
           <div ng-show="(hkllhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{hkllhaettavaavustus}}</h5>
+              <p>{{hkllhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{hkllomarahoitus}}</h5>
+              <p>{{hkllomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(hkllhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -217,16 +217,16 @@
           <div ng-show="(hktlhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{hktlhaettavaavustus}}</h5>
+              <p>{{hktlhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{hktlomarahoitus}}</h5>
+              <p>{{hktlomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(hktlhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -254,16 +254,16 @@
           <div ng-show="(kimhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{kimhaettavaavustus}}</h5>
+              <p>{{kimhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{kimomarahoitus}}</h5>
+              <p>{{kimomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(kimhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -274,16 +274,16 @@
           <div ng-show="(kmpkhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{kmpkhaettavaavustus}}</h5>
+              <p>{{kmpkhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{kmpkomarahoitus}}</h5>
+              <p>{{kmpkomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(kmpkhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -294,16 +294,16 @@
           <div ng-show="(kmkhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{kmkhaettavaavustus}}</h5>
+              <p>{{kmkhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{kmkomarahoitus}}</h5>
+              <p>{{kmkomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(kmkhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -314,16 +314,16 @@
           <div ng-show="(krthaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{krthaettavaavustus}}</h5>
+              <p>{{krthaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{krtomarahoitus}}</h5>
+              <p>{{krtomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(krthaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -334,16 +334,16 @@
           <div ng-show="(kmhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
-              <h5>{{kmhaettavaavustus}}</h5>
+              <p>{{kmhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
-              <h5>{{kmomarahoitus}}</h5>
+              <p>{{kmomarahoitus}}</p>
             </div>
           </div>
           <div ng-show="(kmhaettavaavustus==0)">
             <div class="col-md-12">
-              <h5>Ei haettu avustusta.</h5>
+              <p>Ei haettu avustusta.</p>
             </div>
           </div>
         </div>
@@ -372,10 +372,10 @@
     <div class="row">
       <div class="col-md-12">
         <div ng-show="(avustushakemus.selite!=null)">
-          <h5>{{avustushakemus.selite}}</h5>
+          <p>{{avustushakemus.selite}}</p>
         </div>
         <div ng-show="(avustushakemus.selite==null)">
-          <h5>Ei selitettä.</h5>
+          <p>Ei selitettä.</p>
         </div>
       </div>
     </div>
@@ -389,11 +389,11 @@
     <div class="row">
       <div class="col-md-6">
         <h5>Päivämäärä</h5>
-        <h6>{{aikaleima | date:'dd.MM.yyyy'}}</h6>
+        <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
       </div>
       <div class="col-md-6">
         <h5>Päätöksentekijä</h5>
-        <h6>_kirjautuneen päätöksentekijän nimi_</h6>
+        <p>_kirjautuneen päätöksentekijän nimi_</p>
       </div>
     </div>
     <div class="row">
