--- a/app/views/kasHakemuskaudenHallinta.html
+++ b/app/views/kasHakemuskaudenHallinta.html
@@ -56,8 +56,8 @@
                 <hakemus-label tila="{{hakemuskausi.avustushakemusTilatunnus}}"></hakemus-label>
               </h3>
               <h4>Hakuaika:</h4>
-              <h4>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
-                date:'dd.MM yyyy'}}</h4>
+              <p>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
+                date:'dd.MM yyyy'}}</p>
             </div>
           </div>
         </div>
@@ -71,8 +71,8 @@
                 <hakemus-label tila="{{hakemuskausi.maksatushakemus1Tilatunnus}}"></hakemus-label>
               </h3>
               <h4>Hakuaika:</h4>
-              <h4>{{hakemuskausi.maksatushakemus1Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus1Loppupvm |
-                date:'dd.MM yyyy'}}</h4>
+              <p>{{hakemuskausi.maksatushakemus1Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus1Loppupvm |
+                date:'dd.MM yyyy'}}</p>
             </div>
           </div>
         </div>
@@ -86,8 +86,8 @@
                 <hakemus-label tila="{{hakemuskausi.maksatushakemus2Tilatunnus}}"></hakemus-label>
               </h3>
               <h4>Hakuaika:</h4>
-              <h4>{{hakemuskausi.maksatushakemus2Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus2Loppupvm |
-                date:'dd.MM yyyy'}}</h4>
+              <p>{{hakemuskausi.maksatushakemus2Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus2Loppupvm |
+                date:'dd.MM yyyy'}}</p>
             </div>
           </div>
         </div>
