--- a/app/views/kasPaatos.html
+++ b/app/views/kasPaatos.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2><b>Päätös</b></h2>
+      <h2>Päätös</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h3>Päätös, hakemusid:{{hakemusid}}, avustus:{{avustus}}</h3>
+      <p>Päätös, hakemusid:{{hakemusid}}, avustus:{{avustus}}</p>
     </div>
   </div>
 </div>
