--- a/app/views/kasSuunnittelu.html
+++ b/app/views/kasSuunnittelu.html
@@ -16,7 +16,7 @@
         <th>Hakija</th>
         <th>Haettu avustus</th>
         <th>Muutos</th>
-        <th>Myönnetty avustus</th>
+        <th>Myönnettävä avustus</th>
         <th></th>
       </tr>
       </thead>
