--- a/app/views/lahHakemus.html
+++ b/app/views/lahHakemus.html
@@ -21,35 +21,35 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <h4><b>Kunnan nimi</b></h4>
-      <h5>{{hakija}}</h5>
+      <h4>Kunnan nimi</h4>
+      <p>{{hakija}}</p>
       <h4>Pankkitilin numero</h4>
-      <h5>Puuttuu</h5>
+      <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
-      <h4><b>Hakijat</b></h4>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
+      <h4>Hakijat</h4>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
       <br>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-3">
       <br>
-      <h4><b>Päätöksentekijä</b></h4>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
-      <h5>Puuttuu</h5>
+      <h4>Päätöksentekijä</h4>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
+      <p>Puuttuu</p>
     </div>
   </div>
   <div>
@@ -369,11 +369,11 @@
       <div class="row">
         <div class="col-md-6">
           <h5>Päivämäärä</h5>
-          <h6>{{aikaleima | date:'dd.MM.yyyy'}}</h6>
+          <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
         </div>
         <div class="col-md-6">
           <h5>Päätöksentekijä</h5>
-          <h6>_kirjautuneen päätöksentekijän nimi_</h6>
+          <p>_kirjautuneen päätöksentekijän nimi_</p>
         </div>
       </div>
       <div class="row">
