--- a/app/views/kasHakemukset.html
+++ b/app/views/kasHakemukset.html
@@ -56,7 +56,7 @@
           <div class="col-md-8"/>
           <div class="col-md-4">
             <div class="pull-right">
-              <button class="btn btn-primary" ng-click="getKasSuunnittelu(avustushakemuksetPerVuosi.vuosi)">Suunnittelu ja päätöksenteko<span
+              <button class="btn btn-primary" ng-click="getKasSuunnittelu(avustushakemuksetPerVuosi.vuosi, 'AH0')">Suunnittelu ja päätöksenteko<span
                 class='glyphicon glyphicon-play'/></button>
             </div>
           </div>
