--- a/app/views/kasHakemus.html
+++ b/app/views/kasHakemus.html
@@ -7,35 +7,43 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h2><b>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</b></h2>
+      <h2>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div class="alaviiva">
-        <h3>HAKIJAN TIEDOT</h3>
-      </div>
+      <h3>HAKIJAN TIEDOT</h3>
     </div>
   </div>
   <div class="row">
     <div class="col-md-3">
       <h4>Kunnan nimi</h4>
+
       <p>{{hakija}}</p>
       <h4>Pankkitilin numero</h4>
+
       <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
       <h4>Hakijat</h4>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
       <br>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
     </div>
   </div>
@@ -44,19 +52,21 @@
     <div class="col-md-3">
       <br>
       <h4>Päätöksentekijä</h4>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
     </div>
   </div>
   <div>
     <div class="row">
       <div class="col-md-12">
-        <div class="alaviiva">
-          <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
-            class='glyphicon glyphicon-question-sign'></span></a></h3>
-        </div>
+        <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
+          class='glyphicon glyphicon-question-sign'></span></a></h3>
       </div>
     </div>
     <div class="panel panel-default">
@@ -80,10 +90,12 @@
           <div ng-show="(psa1haettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{psa1haettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{psa1omarahoitus}}</p>
             </div>
           </div>
@@ -100,10 +112,12 @@
           <div ng-show="(psa2haettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{psa2haettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{psa2omarahoitus}}</p>
             </div>
           </div>
@@ -120,10 +134,12 @@
           <div ng-show="(psamhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{psamhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{psamomarahoitus}}</p>
             </div>
           </div>
@@ -157,10 +173,12 @@
           <div ng-show="(hkslhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hkslhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hkslomarahoitus}}</p>
             </div>
           </div>
@@ -177,10 +195,12 @@
           <div ng-show="(hkklhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hkklhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hkklomarahoitus}}</p>
             </div>
           </div>
@@ -197,10 +217,12 @@
           <div ng-show="(hkllhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hkllhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hkllomarahoitus}}</p>
             </div>
           </div>
@@ -217,10 +239,12 @@
           <div ng-show="(hktlhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hktlhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hktlomarahoitus}}</p>
             </div>
           </div>
@@ -254,10 +278,12 @@
           <div ng-show="(kimhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kimhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kimomarahoitus}}</p>
             </div>
           </div>
@@ -274,10 +300,12 @@
           <div ng-show="(kmpkhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kmpkhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kmpkomarahoitus}}</p>
             </div>
           </div>
@@ -294,10 +322,12 @@
           <div ng-show="(kmkhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kmkhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kmkomarahoitus}}</p>
             </div>
           </div>
@@ -314,10 +344,12 @@
           <div ng-show="(krthaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{krthaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{krtomarahoitus}}</p>
             </div>
           </div>
@@ -334,10 +366,12 @@
           <div ng-show="(kmhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kmhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kmomarahoitus}}</p>
             </div>
           </div>
@@ -351,14 +385,14 @@
     </div>
     <div class="row">
       <div class="col-md-9">
-        <h4><b>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</b></h4>
+        <h4>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</h4>
       </div>
       <div class="col-md-3">
         <div class="pull-right">
-          <h4><b>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
+          <h4>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
             hkklhaettavaavustus + hkllhaettavaavustus +
             hktlhaettavaavustus + kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
-            krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</b></h4>
+            krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</h4>
         </div>
       </div>
     </div>
@@ -381,18 +415,18 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div class="alaviiva">
-          <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
-        </div>
+        <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <h5>Päivämäärä</h5>
+
         <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
       </div>
       <div class="col-md-6">
         <h5>Päätöksentekijä</h5>
+
         <p>_kirjautuneen päätöksentekijän nimi_</p>
       </div>
     </div>
