--- a/app/views/kasHakemuskaudenHallinta.html
+++ b/app/views/kasHakemuskaudenHallinta.html
@@ -49,12 +49,12 @@
         <div class="col-md-3 text-center">
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">Avustushakemus</h3>
+              <p class="panel-title">Avustushakemus</p>
             </div>
             <div class="panel-body">
-              <h3>
+              <p>
                 <hakemus-label tila="{{hakemuskausi.avustushakemusTilatunnus}}"></hakemus-label>
-              </h3>
+              </p>
               <h4>Hakuaika:</h4>
               <p>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
                 date:'dd.MM yyyy'}}</p>
@@ -64,12 +64,12 @@
         <div class="col-md-3 text-center">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <h3 class="panel-title">1. maksatushakemus</h3>
+              <p class="panel-title">1. maksatushakemus</p>
             </div>
             <div class="panel-body">
-              <h3>
+              <p>
                 <hakemus-label tila="{{hakemuskausi.maksatushakemus1Tilatunnus}}"></hakemus-label>
-              </h3>
+              </p>
               <h4>Hakuaika:</h4>
               <p>{{hakemuskausi.maksatushakemus1Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus1Loppupvm |
                 date:'dd.MM yyyy'}}</p>
@@ -79,12 +79,12 @@
         <div class="col-md-3 text-center">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <h3 class="panel-title">2. maksatushakemus</h3>
+              <p class="panel-title">2. maksatushakemus</p>
             </div>
             <div class="panel-body">
-              <h3>
+              <p>
                 <hakemus-label tila="{{hakemuskausi.maksatushakemus2Tilatunnus}}"></hakemus-label>
-              </h3>
+              </p>
               <h4>Hakuaika:</h4>
               <p>{{hakemuskausi.maksatushakemus2Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus2Loppupvm |
                 date:'dd.MM yyyy'}}</p>
