--- a/app/views/lahHakemus.html
+++ b/app/views/lahHakemus.html
@@ -9,15 +9,13 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h2><b>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</b></h2>
+      <h2>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div class="alaviiva">
         <h3>HAKIJAN TIEDOT</h3>
       </div>
-    </div>
   </div>
   <div class="row">
     <div class="col-md-3">
@@ -56,10 +54,8 @@
     <form name="avustusHakemusForm">
       <div class="row">
         <div class="col-md-12">
-          <div class="alaviiva">
             <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
               class='glyphicon glyphicon-question-sign'></span></a></h3>
-          </div>
         </div>
       </div>
       <div class="panel panel-default">
@@ -294,14 +290,14 @@
       </div>
       <div class="row">
         <div class="col-md-9">
-          <h4><b>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</b></h4>
+          <h4>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</h4>
         </div>
         <div class="col-md-3">
           <div class="pull-right">
-            <h4><b>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
+            <h4>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
               hkklhaettavaavustus + hkllhaettavaavustus +
               hktlhaettavaavustus + kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
-              krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</b></h4>
+              krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</h4>
           </div>
         </div>
       </div>
@@ -355,10 +351,8 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="alaviiva">
             <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
           </div>
-        </div>
       </div>
       <div class="row">
         <div class="col-md-12">
