--- a/app/views/lahHakemusEsikatselu.html
+++ b/app/views/lahHakemusEsikatselu.html
@@ -9,35 +9,43 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h2><b>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</b></h2>
+      <h2>Joukkoliikenten valtionavustushakemus {{avustushakemus.vuosi}}</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div class="alaviiva">
-        <h3>HAKIJAN TIEDOT</h3>
-      </div>
+      <h3>HAKIJAN TIEDOT</h3>
     </div>
   </div>
   <div class="row">
     <div class="col-md-3">
-      <h4><b>Kunnan nimi</b></h4>
+      <h4>Kunnan nimi</h4>
+
       <p>{{hakija}}</p>
       <h4>Pankkitilin numero</h4>
+
       <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
-      <h4><b>Hakijat</b></h4>
+      <h4>Hakijat</h4>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
     </div>
     <div class="col-md-3">
       <br>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
     </div>
   </div>
@@ -45,20 +53,22 @@
     <div class="col-md-3"></div>
     <div class="col-md-3">
       <br>
-      <h4><b>Päätöksentekijä</b></h4>
+      <h4>Päätöksentekijä</h4>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
+
       <p>Puuttuu</p>
     </div>
   </div>
   <div>
     <div class="row">
       <div class="col-md-12">
-        <div class="alaviiva">
-          <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
-            class='glyphicon glyphicon-question-sign'></span></a></h3>
-        </div>
+        <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
+          class='glyphicon glyphicon-question-sign'></span></a></h3>
       </div>
     </div>
     <div class="panel panel-default">
@@ -82,10 +92,12 @@
           <div ng-show="(psa1haettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{psa1haettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{psa1omarahoitus}}</p>
             </div>
           </div>
@@ -102,10 +114,12 @@
           <div ng-show="(psa2haettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{psa2haettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{psa2omarahoitus}}</p>
             </div>
           </div>
@@ -122,10 +136,12 @@
           <div ng-show="(psamhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{psamhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{psamomarahoitus}}</p>
             </div>
           </div>
@@ -159,10 +175,12 @@
           <div ng-show="(hkslhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hkslhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hkslomarahoitus}}</p>
             </div>
           </div>
@@ -179,10 +197,12 @@
           <div ng-show="(hkklhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hkklhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hkklomarahoitus}}</p>
             </div>
           </div>
@@ -199,10 +219,12 @@
           <div ng-show="(hkllhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hkllhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hkllomarahoitus}}</p>
             </div>
           </div>
@@ -219,10 +241,12 @@
           <div ng-show="(hktlhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{hktlhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{hktlomarahoitus}}</p>
             </div>
           </div>
@@ -256,10 +280,12 @@
           <div ng-show="(kimhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kimhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kimomarahoitus}}</p>
             </div>
           </div>
@@ -276,10 +302,12 @@
           <div ng-show="(kmpkhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kmpkhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kmpkomarahoitus}}</p>
             </div>
           </div>
@@ -296,10 +324,12 @@
           <div ng-show="(kmkhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kmkhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kmkomarahoitus}}</p>
             </div>
           </div>
@@ -316,10 +346,12 @@
           <div ng-show="(krthaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{krthaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{krtomarahoitus}}</p>
             </div>
           </div>
@@ -336,10 +368,12 @@
           <div ng-show="(kmhaettavaavustus>0)">
             <div class="col-md-6">
               <h5>Haettava valtionavustus (euroa)</h5>
+
               <p>{{kmhaettavaavustus}}</p>
             </div>
             <div class="col-md-6">
               <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+
               <p>{{kmomarahoitus}}</p>
             </div>
           </div>
@@ -353,14 +387,14 @@
     </div>
     <div class="row">
       <div class="col-md-9">
-        <h4><b>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</b></h4>
+        <h4>JOUKKOLIIKENTEEN VALTIONAVUSTUSHAKEMUS YHTEENSÄ:</h4>
       </div>
       <div class="col-md-3">
         <div class="pull-right">
-          <h4><b>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
+          <h4>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
             hkklhaettavaavustus + hkllhaettavaavustus +
             hktlhaettavaavustus + kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
-            krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</b></h4>
+            krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</h4>
         </div>
       </div>
     </div>
@@ -383,18 +417,18 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div class="alaviiva">
-          <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
-        </div>
+        <h3>HAKEMUKSEN PÄIVÄMÄÄRÄ JA PÄÄTÖKSENTEKIJÄ</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <h5>Päivämäärä</h5>
+
         <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
       </div>
       <div class="col-md-6">
         <h5>Päätöksentekijä</h5>
+
         <p>_kirjautuneen päätöksentekijän nimi_</p>
       </div>
     </div>
