REST rajapinnan refactorointi
-Resource korvattu HTTP:llä
-DataAPI poistettu ja toiminnallisuus jaettu useampiin moduleihin
-MockbackendApi poistettu, koska omaa sisäistä tietokantaa ei enää
tarvita

--- a/app/views/kasHakemus.html
+++ b/app/views/kasHakemus.html
@@ -436,7 +436,7 @@
           suunnittelunäkymään</a>
       </div>
       <div class="col-md-6">
-        <button data-ng-click="checkAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi</button>
+        <button data-ng-click="tarkastaAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi</button>
       </div>
     </div>
   </div>
