--- a/app/views/kasHakemuskaudenHallinta.html
+++ b/app/views/kasHakemuskaudenHallinta.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-9">
           <div class="row">
-            <button data-ng-click="createHakemuskausi(hakemuskausi.vuosi)" class="btn btn-success btn-lg">Käynnistä
+            <button data-ng-click="luoUusiHakemuskausi(hakemuskausi.vuosi)" class="btn btn-success btn-lg">Käynnistä
               hakemus oletusarvoilla
             </button>
           </div>
