--- a/app/views/kasSuunnittelu.html
+++ b/app/views/kasSuunnittelu.html
@@ -34,7 +34,7 @@
           </td>
           <td>{{hakemus.muutos}}</td>
           <td><input type="number" min="0" class="form-control"
-                     ng-model="hakemus.myonnettavaAvustus" ng-blur="updateAvustus(hakemus.hakemusId,hakemus.myonnettavaAvustus)"/></td>
+                     ng-model="hakemus.myonnettavaAvustus" ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)"/></td>
           <td>
             <button class="btn btn-primary" ng-click="getPaatos(hakemus.hakemusId,hakemus.myonnettavaAvustus)">
               Päätöksentekoon
